// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AttachmentsTag component AttachmentsTag snapshot test should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-alignSelf-k200y r-backgroundColor-1v0ekwd r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-height-1472mwg"
  dir={null}
  style={
    {
      "opacity": 0,
    }
  }
>
  <div
    className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010 r-borderRadius-18c69zk r-height-z80fyv r-marginLeft-9cviqr r-marginRight-1d4mawv r-width-19wmn03"
    dir={null}
  >
    <div
      className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
      dir={null}
      suppressHydrationWarning={true}
    />
  </div>
  <div
    className="css-text-146c3p1 r-color-hiecfz r-marginRight-1kb76zh"
    dir="auto"
    style={
      {
        "fontFamily": "Roboto-Medium",
        "fontSize": "14px",
        "letterSpacing": "0.16px",
        "lineHeight": "22px",
      }
    }
  >
    some text
  </div>
  <div
    className="css-view-g5y9jx r-flexDirection-18u37iz r-flexGrow-16y2uox r-justifyContent-17s6mgv"
    dir={null}
  >
    <div
      className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-marginLeft-167t6pc r-marginRight-wo5hl7"
      dir={null}
      onClick={[Function]}
      onContextMenu={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "transitionDuration": "0s",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
      >
        <div
          className="css-text-146c3p1"
          dir="auto"
          style={
            {
              "color": "rgba(138,148,166,1.00)",
              "fontFamily": "alldone",
              "fontSize": "16px",
              "opacity": 1,
            }
          }
        >
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AttachmentsTag component AttachmentsTag snapshot test should render correctly 2`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-alignSelf-k200y r-backgroundColor-1v0ekwd r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-height-1472mwg"
  dir={null}
  style={
    {
      "opacity": 0,
    }
  }
>
  <div
    className="css-view-g5y9jx r-alignSelf-1kihuf0 r-flexDirection-18u37iz r-marginLeft-zof4xz r-marginRight-s62sum"
    dir={null}
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        style={
          {
            "color": "rgba(138,148,166,1.00)",
            "fontFamily": "alldone",
            "fontSize": "16px",
            "opacity": 1,
          }
        }
      >
        
      </div>
    </div>
  </div>
  <div
    className="css-text-146c3p1 r-color-hiecfz r-marginRight-1kb76zh"
    dir="auto"
    style={
      {
        "fontFamily": "Roboto-Medium",
        "fontSize": "14px",
        "letterSpacing": "0.16px",
        "lineHeight": "22px",
      }
    }
  >
    some text
  </div>
</div>
`;
